# zabbix-cli

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AUTHORS  CHANGELOG  README.md  TODO  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  tox.ini  zabbix-cli-init.py  zabbix-cli.spec
.github/workflows/: build.yml  docs.yml  documentation.yml  test.yml
changelog/: index.html
commands/: index.html
commands/CLI/: index.html
commands/Host/: index.html
commands/Host_Group/: index.html
commands/Host_Interface/: index.html
commands/Host_Monitoring/: index.html
commands/ImportExport/: index.html
commands/Macro_(Global)/: index.html
commands/Macro_(Host)/: index.html
commands/Macro_(User)/: index.html
commands/Maintenance/: index.html
commands/Media/: index.html
commands/Problem/: index.html
commands/Proxy/: index.html
commands/Proxy_Group/: index.html
commands/Template/: index.html
commands/Template_Group/: index.html
commands/User/: index.html
commands/User_Group/: index.html
data/: commandlist.yaml  commands.yaml  config_options.yaml  formats.yaml  help.txt  options.yaml  sample_config.toml
deb/: changelog  control  copyright
debian/: changelog  control  copyright  rules  watch
debian/upstream/: metadata
docs/: Makefile  changelog.md  check_commands.sh  conf.py  index.md  index.rst  manual.rst  style.css
docs/.includes/: admonition-pypi.md  config-locations.md  pipx-multiple.md  quick-install.md  upgrade.md
docs/_static/css/: manual.css
docs/_static/js/: manual.js
docs/commands/: index.md
docs/guide/: authentication.md  bulk.md  configuration.md  index.md  installation.md  introduction.md  logging.md  migration.md  usage.md
docs/plugins/: external-plugins.md  guide.md  index.md  local-plugins.md  writing-plugins.md
docs/scripts/: gen_cli_data.py  gen_cli_options.py  gen_command_list.py  gen_command_pages.py  gen_commands.py  gen_config_data.py  gen_formats.py  gen_ref_pages.py  run.py
docs/scripts/utils/: commands.py  markup.py
docs/templates/: category.md.j2  command_list.md.j2
etc/: zabbix-cli.conf
guide/: index.html
guide/authentication/: index.html
guide/bulk/: index.html
guide/commands/CLI/: index.html
guide/commands/Host/: index.html
guide/commands/ImportExport/: index.html
guide/commands/Item/: index.html
guide/commands/Macro/: index.html
guide/commands/Maintenance/: index.html
guide/commands/Problem/: index.html
guide/commands/Proxy/: index.html
guide/commands/Template/: index.html
guide/commands/User/: index.html
guide/configuration/: index.html
guide/installation/: index.html
guide/introduction/: index.html
guide/logging/: index.html
guide/migration/: index.html
guide/usage/: index.html
plugins/: index.html
plugins/external-plugins/: index.html
plugins/guide/: index.html
plugins/local-plugins/: index.html
rpm/: zabbix-cli.spec
scripts/: bump_version.py  common.py  gen_cli_data.py  gen_commands.py  gen_config_data.py  gen_formats.py  gen_ref_pages.py  run.py
scripts/utils/: commands.py
search/: search_index.json
tests/: conftest.py  test_apiutils.py  test_app.py  test_auth.py  test_bulk.py  test_compat.py  test_config.py  test_console.py  test_exceptions.py  test_logging.py  test_models.py  test_patches.py  test_prompts.py  test_pyzabbix.py  test_repl.py  test_style.py  test_update.py  test_utils.py  test_version.py  utils.py
tests/commands/: test_cli_configwizard.py  test_common.py  test_macro.py
tests/data/: zabbix-cli-old-v3.toml  zabbix-cli.conf  zabbix-cli.toml
tests/pyzabbix/: test_client.py  test_enums.py  test_types.py
tests/test_docs/: test_markup.py
zabbix_cli/: __about__.py  __init__.py  __main__.py  _typer.py  _types.py  _v2_compat.py  _zcli_compat.py  apiutils.py  app.py  auth.py  bulk.py  cache.py  cli.py  compat.py  config.py  dirs.py  exceptions.py  history.py  logs.py  main.py  models.py  plugins.py  prettytable.py  pyzabbix.py  state.py  table.py  update.py  utils.py  version.py
zabbix_cli/_patches/: __init__.py  click_repl.py  common.py  typer.py
zabbix_cli/app/: __init__.py  app.py  plugins.py
zabbix_cli/commands/: __init__.py  _app.py  _internal.py  cli.py  cli_configwizard.py  export.py  history.py  host.py  host_interface.py  host_monitoring.py  hostgroup.py  item.py  macro.py  maintenance.py  media.py  problem.py  proxy.py  template.py  templategroup.py  user.py  usergroup.py
zabbix_cli/commands/common/: args.py
zabbix_cli/commands/results/: __init__.py  cli.py  export.py  host.py  hostgroup.py  item.py  macro.py  maintenance.py  problem.py  proxy.py  template.py  templategroup.py  user.py  usergroup.py
zabbix_cli/config/: __main__.py  base.py  commands.py  constants.py  model.py  run.py  utils.py
zabbix_cli/output/: console.py  prompts.py  render.py  style.py
zabbix_cli/output/formatting/: bytes.py  constants.py  dates.py  grammar.py  path.py
zabbix_cli/output/style/: __init__.py  color.py  markup.py  style.py
zabbix_cli/pyzabbix/: __init__.py  client.py  compat.py  enums.py  pyzabbix.py  types.py  utils.py
zabbix_cli/repl/: __init__.py  completer.py  repl.py
zabbix_cli/scripts/: __init__.py  bulk_execution.py  cli.py  init.py
zabbix_cli/utils/: __init__.py  args.py  commands.py  fs.py  rich.py  utils.py
